Fixed Calc styling to look better on mobile

--- a/styles/Calculator.module.css
+++ b/styles/Calculator.module.css
@@ -19,8 +19,8 @@
   background-color: #f08c00;
   display: flex;
   flex-direction: column;
-  min-width: 32vw;
-  max-width: 44vw;
+  min-width: 44vw;
+  max-width: 90vw;
   padding: 4px;
 }
 
@@ -54,10 +54,11 @@
 
 .button {
   min-width: 10vw;
-  width: inherit;
+  height: 10vh;
   min-height: 10vh;
   font-size: 16px;
   font-weight: bold;
+  margin: 2px;
 }
 
 .clearbuttoncontainer {
@@ -66,12 +67,13 @@
 }
 
 .clearbutton {
-  width: 20vw;
+  width: 24vw;
   height: 10vh;
   background-color: #B94E48;
   font-size: 16px;
   font-weight: bold;
   margin-left: 8px;
+  margin: 2px;
 }
 
 .clearbutton:hover {
@@ -86,6 +88,7 @@
   font-weight: bold;
   min-width: 10vw;
   min-height: 10vh;
+  margin: 2px;
 }
 
 .dividebutton {
@@ -94,98 +97,127 @@
   min-width: 10vw;
   min-height: 10vh;
   margin-right: 8px;
+  margin: 2px;
 }
 
 .button7 {
   grid-column: 1/2;
   grid-row: 2;
   background-color: inherit;
+  min-width: 10vw;
   margin-left: 8px;
+  margin: 2px;
 }
 
 .button8 {
   grid-column: 2/3;
   grid-row: 2;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .button9 {
   grid-column: 3/4;
   grid-row: 2;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .multiplybutton {
   grid-column: 4/5;
   grid-row: 2;
   background-color: inherit;
+  min-width: 10vw;
   margin-right: 8px;
+  margin: 2px;
 }
 
 .button4 {
   grid-column: 1/2;
   grid-row: 3;
   background-color: inherit;
+  min-width: 10vw;
   margin-left: 8px;
+  margin: 2px;
 }
 
 .button5 {
   grid-column: 2/3;
   grid-row: 3;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .button6 {
   grid-column: 3/4;
   grid-row: 3;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .subtractbutton {
   grid-column: 4/5;
   grid-row: 3;
   background-color: inherit;
+  min-width: 10vw;
   margin-right: 8px;
+  margin: 2px;
 }
 
 .button1 {
   grid-column: 1/2;
   grid-row: 4;
   background-color: inherit;
+  min-width: 10vw;
   margin-left: 8px;
+  margin: 2px;
 }
 
 .button2 {
   grid-column: 2/3;
   grid-row: 4;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .button3 {
   grid-column: 3/4;
   grid-row: 4;
   background-color: inherit;
+  min-width: 10vw;
+  margin: 2px;
 }
 
 .addbutton {
   grid-column: 4/5;
   grid-row: 4;
   background-color: inherit;
+  margin: 2px;
+  min-width: 10vw;
 }
 
 .zerobutton {
   grid-column: 1/2;
   grid-row: 5;
   background-color: inherit;
+  min-width: 10vw;
   margin-left: 8px;
   margin-bottom: 8px;
+  margin: 2px;
 }
 
 .decimalbutton {
   grid-column: 2/3;
   grid-row: 5;
   background-color: inherit;
+  min-width: 10vw;
   margin-bottom: 8px;
+  margin: 2px;
 }
 
 .equalsbuttoncontainer {
@@ -200,6 +232,7 @@
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 8px;
+  margin: 2px;
 }
 
 .equalsbutton:hover {
@@ -213,6 +246,7 @@
   background-color: #ffb300;
   font-size: 16px;
   font-weight: bold;
+  margin: 2px;
 }
 
 .signbutton:hover {
